--- a/ConfiguracionUsuarios/Properties/Resources.resx
+++ b/ConfiguracionUsuarios/Properties/Resources.resx
@@ -202,4 +202,7 @@
   <data name="fail" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fail.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_sistema" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo sistema.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
