--- a/ConfiguracionUsuarios/Properties/Resources.resx
+++ b/ConfiguracionUsuarios/Properties/Resources.resx
@@ -205,4 +205,7 @@
   <data name="logo_sistema" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo sistema.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="suggestion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\suggestion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
